# api_token_itau

./: .gitignore  create_table.py  gunicorn_conf.py  main.py  pyproject.toml  sqldblite.db
api/v1/: api.py
api/v1/endpoint/: auth.py  boleto_itua.py  token_itau.py  usuario.py
core/: buscar_token.py  config.py  database.py  deps.py  security.py
models/: usuario_model.py
schemas/: boleto_itau_shcema.py  buscar_token_itau_schema.py  token_itau_retorno_schema.py  token_schemas.py  usuario_schema.py
