[tool.poetry]
name = "api-itau"
version = "0.1.0"
description = ""
authors = ["Andre de Paula <andrepps22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.2"
pydantic-settings = "^2.6.0"
aiosqlite = "^0.20.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
uvicorn = "^0.32.0"
pyjwt = "^2.9.0"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
python-multipart = "^0.0.12"
tzdata = "^2024.2"
requests = "^2.32.3"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
